[gd_scene load_steps=16 format=3 uid="uid://u0rqprt81pas"]

[ext_resource type="FontFile" uid="uid://vxjlxsvfng4u" path="res://Fonts/segui_semi_bold.ttf" id="1_u0ko4"]
[ext_resource type="Script" uid="uid://dw34m7d1vvhxg" path="res://_MANAGERS/UI/menu_button.gd" id="2_ymosn"]
[ext_resource type="AudioStream" uid="uid://qpt3nmj24kdx" path="res://Sounds/impact_soft/soft1.ogg" id="3_bawsp"]
[ext_resource type="AudioStream" uid="uid://6pi0oi8jx8by" path="res://Sounds/impact_soft/soft2.ogg" id="4_t6f3t"]
[ext_resource type="AudioStream" uid="uid://7fhfltsgpuss" path="res://Sounds/impact_soft/soft3.ogg" id="5_bkg6c"]
[ext_resource type="AudioStream" uid="uid://bmhyvq1ucstr0" path="res://Sounds/impact_soft/soft4.ogg" id="6_t2weu"]
[ext_resource type="AudioStream" uid="uid://bnhyl7xy6k15i" path="res://Sounds/impact_soft/soft5.ogg" id="7_ufnud"]
[ext_resource type="AudioStream" uid="uid://bjpjbd4agn1eq" path="res://Sounds/impact_bloody/bloody1.ogg" id="8_hn3wi"]
[ext_resource type="AudioStream" uid="uid://b2uje1y503456" path="res://Sounds/impact_bloody/bloody2.ogg" id="9_7ujg3"]
[ext_resource type="AudioStream" uid="uid://bnaji0clr1j6c" path="res://Sounds/impact_bloody/bloody3.ogg" id="10_q3m2e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s0yte"]
resource_local_to_scene = true
content_margin_left = 100.0
content_margin_right = 100.0
bg_color = Color(1, 0.25, 0.7875, 1)
corner_radius_top_left = 40
corner_radius_top_right = 15
corner_radius_bottom_right = 40
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ymosn"]
resource_local_to_scene = true
content_margin_bottom = 8.0
bg_color = Color(1, 0.25, 0.7875, 1)
border_color = Color(0, 0.966667, 1, 1)
corner_radius_top_left = 40
corner_radius_top_right = 15
corner_radius_bottom_right = 40
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a5m03"]
resource_local_to_scene = true
bg_color = Color(1, 0.25, 0.7875, 1)
draw_center = false
border_color = Color(0, 0.966667, 1, 1)
corner_radius_top_left = 40
corner_radius_top_right = 15
corner_radius_bottom_right = 40
corner_radius_bottom_left = 15

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_dti24"]
random_pitch = 1.15
streams_count = 5
stream_0/stream = ExtResource("3_bawsp")
stream_1/stream = ExtResource("4_t6f3t")
stream_2/stream = ExtResource("5_bkg6c")
stream_3/stream = ExtResource("6_t2weu")
stream_4/stream = ExtResource("7_ufnud")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_q2kyl"]
random_pitch = 1.1
streams_count = 3
stream_0/stream = ExtResource("8_hn3wi")
stream_1/stream = ExtResource("9_7ujg3")
stream_2/stream = ExtResource("10_q3m2e")

[node name="Button" type="Label"]
custom_minimum_size = Vector2(300, 0)
offset_right = 354.0
offset_bottom = 72.0
focus_mode = 2
mouse_filter = 0
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_u0ko4")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_s0yte")
theme_override_styles/focus = SubResource("StyleBoxFlat_s0yte")
text = "button"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_ymosn")

[node name="backPanel" type="Panel" parent="."]
clip_children = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ymosn")

[node name="blueBorder" type="Panel" parent="backPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a5m03")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
ignore_time_scale = true

[node name="selectSFX" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_dti24")
max_polyphony = 3
bus = &"soundEffects"

[node name="confirmSFX" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_q2kyl")
bus = &"soundEffects"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
